# cicd

./: .flake8  .gitignore  .gitlab-ci.yml  .project-ci.yml  README.md  pyproject.toml
.github/workflows/: main.yml
statemachine/: statemachine.json
terraform/: main.tf  terraform.tf  variables.tf
terraform/variables/: nonprod.tfvars  prod.tfvars
